# Booking_Online

./: .gitignore  pyproject.toml  requirement.txt  set_webhook.py
apps/: permissions.py  urls.py  utils.py  views.py
apps/models/: __init__.py  base.py  business.py  user.py
apps/seralizers/: __init__.py  auth.py  free.py
apps/views/: __init__.py  auth.py  views.py
bot/: __init__.py  config.py  handles.py  urls.py  view.py
env/: .env.example
root/: settings.py  urls.py
