[project]
name = "booking-online"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "daphne>=4.2.1",
    "django>=6.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "ujson>=5.11.0",
]
